Fixed spacing below header on index.html; changed links to be the same color when visit and not visited.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -136,10 +136,6 @@ p a {
 	&:hover {
 	text-decoration: underline;
 	}
-
-	&:visited {
-	color: #ab47bc !important;
-	}
 }
 
 /* Images */
